# Supplement_ReLiNet

./: .gitignore  README.md  pyproject.toml
configuration/: industrial-robot.json  ship.json
notebooks/: explanations.ipynb
scripts/: explain_best_models_industrial_robot.py  explain_best_models_ship_ind.py  explain_best_models_ship_ood.py  pull_results_from_server.sh  run_experiment_industrial_robot.py  run_experiment_ship_ind.py  run_experiment_ship_ood.py  setup_environment.py  summarize_results.py  utils.py
src/relinet/: utils.py
