[tool.poetry]
name = "relinet-results"
version = "0.1.0"
description = ""
authors = ["Alexandra Baier <alx.baier@gmail.com>"]
readme = "README.md"
packages = [{include = "relinet", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
deepsysid = { git = "https://github.com/AlexandraBaier/deepsysid.git" }
torch = "^1.13.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
